# linsolver

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  lp.py  pyproject.toml  simplex.py  test.py
.github/workflows/: ci.yml  pypi_upload.yml  python-package.yml
linsolver/: lp.py  simplex.py  simplex2.py  smplx.py
pivotal/: __init__.py  api.py  errors.py  expressions.py  lp.py  simplex.py
tests/: test_api.py  test_lp.py  test_simplex.py
